# codechef-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: users.py
app/routers/: users.py
app/services/: getUsers.py
