[project]
name = "codechef-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]
